Pruebo imagenes webp 1,2,3,4

--- a/ph.html
+++ b/ph.html
@@ -113,8 +113,8 @@
                     <div class="col-lg-4">
                         <h3 class="text-center">Fotos mundial 2022</h3>
                         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.PNG" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.PNG" alt="imagen2" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen1" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen2" width="105%"></swiper-slide>
                             <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen3" width="105%"></swiper-slide>
                             <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
                         </swiper-container>
