Subo seccion /mi equipo

--- a/equipo.html
+++ b/equipo.html
@@ -60,7 +60,7 @@
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#galeria">Galería</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#./equipo">Mi equipo</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#equipo">Mi equipo</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/">Más</a></li>
 
                                 <!--<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Proyectos</a></li>
@@ -107,38 +107,39 @@
         </div>
     </div>
     <!--========== SLIDER ==========-->
+
         <!-- GALERIA -->
         <div id="galeria">
             <div class="container content-lg">
                 <div class="row">
-                    <div class="col-lg-4">
-                        <h3 class="text-center">Fotos mundial 2022</h3>
-                        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide> << Desliza</swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
-                        </swiper-container>
+                    <div class="col-lg-4 col text-center">
+                        <h3>Nikon D5100</h3>
+                        <img class="logo-img " src="img/equipo/01.webp" alt="imagen1" width="80%">
+                        <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
+                        <div class="d-grid gap-2 d-md-block">
+                            <a class="btn btn-primary" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a>
+                            <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
+                        </div>
                     </div>
-                    <div class="col-lg-4">
-                        <h3 class="text-center">Fotos mundial 2022</h3>
-                        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
-                        </swiper-container>
+                    <div class="col-lg-4 col text-center">
+                        <h3>Nikkor 18-55</h3>
+                        <img class="logo-img " src="img/equipo/02.webp" alt="imagen1" width="200">
+                        <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
+                        <div class="d-grid gap-2 d-md-block">
+                            <a class="btn btn-primary" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a>
+                            <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
+                        </div>
                     </div>
-                    <div class="col-lg-4">
-                        <h3 class="text-center">Fotos mundial 2022</h3>
-                        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
-                        </swiper-container>
+                    <div class="col-lg-4 col text-center">
+                        <h3>Nikkor 55-300</h3>
+                        <img class="logo-img " src="img/equipo/03.webp" alt="imagen1" width="80%">
+                        <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
+                        <div class="d-grid gap-2 d-md-block">
+                            <a class="btn btn-primary" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a>
+                            <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
+                        </div>
                     </div>
+
 
 
 
