Cambio texto en /equipo

--- a/equipo.html
+++ b/equipo.html
@@ -81,14 +81,10 @@
                         <p class="promo-block-text"><a href="https://www.instagram.com/lucashermannph/" class="social-icons"><i class="bi bi-instagram"></i></a> @lucashermannph </p>
                         <p>
                             Muy buenas, soy Lucas Hermann y me dedico a la fotografía desde 2014.
-                            <br>
-                            Aunque este arte me acompaña desde que nací, ya que soy la tercera generación en mi familia en dedicarse a esto, más puntualmente a la fotografía de viaje.
-                            <br>
                         </p>
                         <p>
-                            Esta pasión inició al ver los recuerdos capturados por mi abuelo durante su viaje en barco por todo América. Pero esa es historia para otro día... 
-                            <br>
-                            Porque acá vas a encontrar mis recuerdos
+                            Acá vas a encontrar el equipo que fui adquiriendo a lo largo de los años, el equipo que uso para salir a fotear, grabar y hasta editar.
+                            Espero que te sirva a modo de guía y pueda satisfacer esa curiosidad da saber que hay dentro de la mochila de un fotógrafo.
                         </p>
                     </div>
 
@@ -321,44 +317,6 @@
         </div>
         <!-- End equipo -->
 
-
-        <!-- ACA -->
-        <!-- Contacto -->
-        <div id="contact">
-            <!-- <div class="bg-color-sky-light"> --> 
-            <div class="bg-color-sky-light">
-                <div class="container content-lg">
-                    <div class="row margin-b-40">
-                        <div class="col-sm-6">
-                           <h2>Contacto</h2>
-                        </div>
-                    </div>
-                    <!--// end row -->
-
-                    <div class="row">
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>WhatsApp</h4>
-                            <a href="https://wa.me/+5491122923987/">+54 9 11-2292-3987 - [Enviar]</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>Correo Electrónico</h4>
-                            <a href="mailto:lucashermannit@gmail.com">Lucas Hermann IT - [Enviar]</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6">
-                            <h4>Instagram</h4>
-                            <a href="https://www.instagram.com/lucashermannph/">Lucas Hermann PH - [Visitar]</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6">
-                            <h4>Linkedin</h4>
-                            <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann - [Visitar]</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Contact -->
-        <!--========== END PAGE LAYOUT ==========-->
-
         <!--========== FOOTER ==========-->
         <footer class="footer">
             <div class="content container">
@@ -367,7 +325,7 @@
                         <img class="footer-logo" src="" alt="">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/lucashermannit/">Ver en Linkedin</a>  <a class="fweight-700"</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="/ph">Volver</a>  <a class="fweight-700"</a></p>
                     </div>
                 </div>
                 <!--// end row -->
