--- a/equipo.html
+++ b/equipo.html
@@ -311,6 +311,16 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
+
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
+                        <h3>Test</h3>
+                        <img class="mx-auto d-block" src="img/equipo/samsung1tb.webp" alt="imagen1" height="200">
+                        <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
+                        <div class="d-grid gap-2 d-md-block margin-t-20">
+                            <a class="btn btn-primary" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a>
+                            <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
+                        </div>
+                    </div>
                     
                 </div>
             </div>
