--- a/cv.html
+++ b/cv.html
@@ -378,6 +378,16 @@
         <script src="js/components/wow.min.js" type="text/javascript"></script>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+        
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1LX1KV1E6P"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-1LX1KV1E6P');
+        </script>
 
     </body>
     <!-- END BODY -->
