--- a/ph.html
+++ b/ph.html
@@ -250,6 +250,16 @@
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1LX1KV1E6P"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-1LX1KV1E6P');
+        </script>
+
     </body>
     <!-- END BODY -->
 </html>
