arreglo columnas y filas en /equipo

--- a/equipo 2.html
+++ b/equipo 2.html
@@ -104,7 +104,7 @@
         <div id="equipo">
             <div class="container content-lg">
                 <div class="row">
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-md-4 text-center">
                         <h3>Nikon D5100</h3>
                         <img class="mx-auto d-block" src="img/equipo/nikon.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -113,7 +113,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-md-4 text-center">
                         <h3>Nikkor 18-55</h3>
                         <img class="mx-auto d-block" src="img/equipo/nikkor1855.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -122,7 +122,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-md-4 text-center">
                         <h3>Nikkor 55-300</h3>
                         <img class="mx-auto d-block" src="img/equipo/nikkor55300.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Insta360 x3</h3>
                         <img class="mx-auto d-block" src="img/equipo/instax3.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -142,7 +142,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Palo Selfie 3 m</h3>
                         <img class="mx-auto d-block" src="img/equipo/paloselfie.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -151,8 +151,8 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
-                        <h3>Sennheiser mke-200</h3>
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
+                        <h3>Micrófono Sennheiser mke-200</h3>
                         <img class="mx-auto d-block" src="img/equipo/miccable.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
                         <div class="d-grid gap-2 d-md-block margin-t-20">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Iphone SE</h3>
                         <img class="mx-auto d-block" src="img/equipo/iphonese.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -171,7 +171,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Batería Xiaomi PowerBank 3</h3>
                         <img class="mx-auto d-block" src="img/equipo/powerbank.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -180,7 +180,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Monocular Celestron 10x25</h3>
                         <img class="mx-auto d-block" src="img/equipo/celestron10x25.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Flash Yongnuo Yn-565ex III</h3>
                         <img class="mx-auto d-block" src="img/equipo/flash.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -200,8 +200,8 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
-                        <h3>Anillo 26cm + Tripode 2m</h3>
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
+                        <h3>Anillo Led 26cm con Tripode 2m</h3>
                         <img class="mx-auto d-block" src="img/equipo/tripodeanillogrande.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
                         <div class="d-grid gap-2 d-md-block margin-t-20">
@@ -209,8 +209,8 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
-                        <h3>Anillo 16cm + Tripode 0.8cm</h3>
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
+                        <h3>Anillo Led 16cm con Tripode 0.8cm</h3>
                         <img class="mx-auto d-block" src="img/equipo/tripodeanillochico.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
                         <div class="d-grid gap-2 d-md-block margin-t-20">
@@ -220,7 +220,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Disparador Remoto IR</h3>
                         <img class="mx-auto d-block" src="img/equipo/controlir.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -229,7 +229,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Tripode Joby Gorillapod</h3>
                         <img class="mx-auto d-block" src="img/equipo/tripodejoby.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -238,7 +238,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Tripode 110cm</h3>
                         <img class="mx-auto d-block" src="img/equipo/tripode110.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -249,7 +249,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Notebook 17" Gateway nv59c</h3>
                         <img class="mx-auto d-block" src="img/equipo/notebook.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -258,7 +258,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Mochila 17"</h3>
                         <img class="mx-auto d-block" src="img/equipo/mochila17.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -267,7 +267,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Morral 9 litros</h3>
                         <img class="mx-auto d-block" src="img/equipo/morral9.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>SanDisk Extreme 256Gb v30 </h3>
                         <img class="mx-auto d-block" src="img/equipo/sd256.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -287,7 +287,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Kingston 16Gb clase 10</h3>
                         <img class="mx-auto d-block" src="img/equipo/sd16.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -296,7 +296,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Kingston 32Gb clase 10</h3>
                         <img class="mx-auto d-block" src="img/equipo/sd32.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -307,7 +307,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Disco Rigido Seagate 2TB</h3>
                         <img class="mx-auto d-block" src="img/equipo/seagate2tb.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -316,7 +316,7 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
                         <h3>Disco Rigido Samsung 1TB</h3>
                         <img class="mx-auto d-block" src="img/equipo/samsung1tb.webp" alt="imagen1" height="200">
                         <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
@@ -325,14 +325,17 @@
                             <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
                         </div>
                     </div>
-
-                    <!--   PROXIMOS PRODUCTOS     -->
-           
-
-
-                    <!--  END - PROXIMOS PRODUCTOS     -->
-
+                    <div class="col-lg-4 text-center margin-t-50 margin-b-50">
+                        <h3>Test 7</h3>
+                        <img class="mx-auto d-block" src="img/equipo/samsung1tb.webp" alt="imagen1" height="200">
+                        <!-- <a class="btn btn-primary btn-lg" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a> -->
+                        <div class="d-grid gap-2 d-md-block margin-t-20">
+                            <a class="btn btn-primary" href="https://www.amazon.com/Nikon-Camera-18-55mm-3-5-5-6-Focus-S/dp/B004V4IWKG" role="button">Comprar</a>
+                            <a class="btn btn-warning" href="https://www.youtube.com/watch?v=GmS1tV__OnQ" role="button">Ver reseña</a>
+                        </div>
+                    </div>
                 </div>
+                    
             </div>
         </div>
         <!-- End equipo -->
