test container para viajes

--- a/viajes.html
+++ b/viajes.html
@@ -109,7 +109,7 @@
     <!--========== SLIDER ==========-->
 
         <div class="timeline">
-
+            <div class="container">
             <div class="capsula left">
                 <div class="date">JUN 2010</div>
                 <i class="icon"></i>
@@ -121,6 +121,7 @@
                         <swiper-slide><img class="logo-img" src="img/viajes/EntreRios2010/elpalmar/3.jpg" alt="imagen3" width="105%"></swiper-slide>
                     </swiper-container>
                 </div>
+            </div>
             </div>
             <div class="capsula right">
                 <div class="date">JUN 2010</div>
