test container para viajes 3

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.linkedin.com/in/lucashermannit/" class="social-icons"><i class="bi bi-linkedin"></i></a></li>
-                            <li><a href="https://github.com/lucashermannit/" class="social-icons"><i class="bi bi-github"></i></i></a></li>
+                            <li><a href="https://github.com/lucashermannit/" class="social-icons"><i class="bi bi-github"></i></a></li>
                             <li><a href="https://www.instagram.com/lucashermannph/" class="social-icons"><i class="bi bi-instagram"></i></a></li>
                             <li><a href="https://www.youtube.com/@lucashermann.shorts/shorts" class="social-icons"><i class="bi bi-youtube"></i></a></li>
                             <li><a href="https://wa.me/+5491122923987/" class="social-icons"><i class="bi bi-whatsapp"></i></a></li>
@@ -384,7 +384,7 @@ End Experience -->
                         <img class="footer-logo" src="" alt="">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/lucashermannit/">Ver en Linkedin</a>  <a class="fweight-700"</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/lucashermannit/">Ver en Linkedin</a>  <a class="fweight-700"></a></p>
                     </div>
                 </div>
                 <!--// end row -->
