Saco 'TOP' de las paginas menos de INDEX

--- a/equipo.html
+++ b/equipo.html
@@ -60,6 +60,7 @@
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#equipo">Mi equipo</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/ph">Galería</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/">Más</a></li>
                             </ul>
                         </div>
@@ -353,8 +354,8 @@
         </footer>
         <!--========== END FOOTER ==========-->
 
-        <!-- Back To Top -->
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">TOP</a>
+        <!-- Back To Top
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top">TOP</a> -->
 
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
         <!-- CORE PLUGINS -->
