--- a/ph.html
+++ b/ph.html
@@ -249,8 +249,8 @@
         </footer>
         <!--========== END FOOTER ==========-->
 
-        <!-- Back To Top -->
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">TOP</a>
+        <!-- Back To Top 
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top">TOP</a>-->
 
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
         <!-- CORE PLUGINS -->
